[project]
name = "voicera-audio"
version = "0.1.0"
description = "Streamlit app to browse Voicera call recordings and transcripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.53.1",
    "pymongo>=4.0.0",
    "minio>=7.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]
